force-app/main/default/objects/JIRA_User_Story__c/JIRA_User_Story__c.object-meta.xml
<CustomObject>
    <label>JIRA User Story</label>
    <nameField>
        <label>JIRA User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>