force-app/main/default/objects/JIRA_User_Story__c/fields/Description_of_Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Business_Problem__c</fullName>
    <inlineHelpText>What problem is the project addressing?</inlineHelpText>
    <label>Description of Business Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>