force-app/main/default/objects/JIRA_User_Story__c/fields/US_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>US_Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>