force-app/main/default/objects/JIRA_User_Story__c/fields/US_Go_Live_date__c.field-meta.xml
<CustomField>
    <fullName>US_Go_Live_date__c</fullName>
    <label>Go-Live date</label>
    <type>Date</type>
</CustomField>