force-app/main/default/objects/JIRA_User_Story__c/fields/US_Is_Data_Groom_Required__c.field-meta.xml
<CustomField>
    <fullName>US_Is_Data_Groom_Required__c</fullName>
    <inlineHelpText>Indicate if data groom is needed</inlineHelpText>
    <label>Is Data Groom Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>