force-app/main/default/objects/JIRA_User_Story__c/fields/US_Is_the_Salesforce_License_Needed__c.field-meta.xml
<CustomField>
    <fullName>US_Is_the_Salesforce_License_Needed__c</fullName>
    <label>Is the Salesforce License Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>