force-app/main/default/objects/JIRA_User_Story__c/fields/US_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>US_Permission_Set__c</fullName>
    <inlineHelpText>Is there a Permission Set needed?</inlineHelpText>
    <label>Permission Set</label>
    <length>200</length>
    <type>Text</type>
</CustomField>