force-app/main/default/objects/JIRA_User_Story__c/fields/US_PO_off__c.field-meta.xml
<CustomField>
    <fullName>US_PO_off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Product Owner signed off</description>
    <label>PO Sign Off</label>
    <type>Checkbox</type>
</CustomField>