force-app/main/default/objects/JIRA_User_Story__c/fields/US_UAT_Date__c.field-meta.xml
<CustomField>
    <fullName>US_UAT_Date__c</fullName>
    <inlineHelpText>Provide a start and finish date for UAT</inlineHelpText>
    <label>UAT Date</label>
    <length>200</length>
    <type>Text</type>
</CustomField>