force-app/main/default/objects/JIRA_User_Story__c/fields/User_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Points__c</fullName>
    <label>User Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>